[package]
name = "rmap"
version = "0.2.1"
edition = "2021"
authors = ["Marley <marley@marlstar.com>"]
description = "A simple TCP portscanner"
homepage = "https://github.com/Marlstar/rmap"
repository = "https://github.com/Marlstar/rmap"
keywords = ["port", "scanning"]

[dependencies]
hashbrown = "*"
colored = "*"

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.uuid]
version = "1"
features = ["v4", "fast-rng"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
